fixing the footer position on smaller devices

--- a/styles.css
+++ b/styles.css
@@ -698,6 +698,10 @@ body {
     .social-media-list {
         padding: 0;
     }
+
+    .footer {        
+        bottom: -1.5rem;        
+    }
 }
 
 @keyframes animStar {
